# AoC_Day_Template

./: Cargo.toml  cargo-generate.toml  pre-script.rhai
src/: lib.rs  lib_bench.rs
